Creato launcher jar per cli/gui.